--- a/app/views/categories/show.erb
+++ b/app/views/categories/show.erb
@@ -12,10 +12,12 @@
        <span class="count"> <%= q.votes.count %> votes || </span>
        <span> author: <%= q.user.username %> ||</span>
        <span> <%= q.comments.count %> comments </span>
-       <form action = "/questions/<%=q.id %>" method = "POST" class= "inline delete">
-           <input type="hidden" name="_method" value="DELETE" />
-           <button type="submit" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Delete this question</button>
-       </form>
+       <% if q.user.id == session[:id] %>
+           <form action = "/questions/<%=q.id %>" method = "POST" class= "inline delete">
+             <input type="hidden" name="_method" value="DELETE" />
+             <button type="submit" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Delete this question</button>
+          </form>
+      <% end %>
      </article>
     </li>
     <% end %>
