Rough draft commit to work remotely

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -15,7 +15,7 @@
 
 </br>
 <div class="search-form">
-  <form action="/search" method="post">
+  <form action="/search">
     <label for="search"> What's on your mind?: </label>
     <input type="text" name="search" placeholder="Place a search here">
     <input type="submit" value="Search">
