Ajax still needs work

--- a/app/views/questions/new_comment.erb
+++ b/app/views/questions/new_comment.erb
@@ -1,5 +1,5 @@
 <div class='container'>
-   <form action="/questions/<%= @question.id.to_s%>/comments" method="POST">
+   <form action="/questions/<%= @question.id.to_s%>/comments" method="POST" class='submit_question_comment'>
      <label for="comment"> Comment: </label>
      <textarea cols='60' rows='10' name="[comment]body" id='body'></textarea>
      <input type="submit" value="Submit Comment">
