--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -41,7 +41,7 @@
 	<table>
 		<% if !@question_comments.empty? || !@answer_comments.empty? %>
 		<tr>
-			<th>Comments</th>
+			<th>Commented On:</th>
 			<th>Date</th>
 		</tr>
 			<% @question_comments.each do |comment| %>
