--- a/app/views/users/update_user.erb
+++ b/app/views/users/update_user.erb
@@ -1,16 +1,15 @@
 <div class = container>
    <form action = "/users" class="form-inline" method="POST">
     <div class="form-group">
-     <label for = "username"> Username: </label>
+     <label for = "username"> New Username: </label>
      <input class="form-control" type = "text" name = "[user]username" id = username>
    </div>
    <div class="form-group">
-     <label for = "password"> Password: </label>
+     <label for = "password"> New Password: </label>
      <input class="form-control" type = "password" name = "[user]password" id = password>
-     <label for = "email"> Email: </label>
+     <label for = "email"> New Email: </label>
   </div>
      <input class="form-control" type = "email" name = "[user]email" id = email>
      <button type="submit" class="btn btn-primary btn-sm">Register</button>
   </form>
 </div>
- 
