--- a/app/views/answers/new_comment.erb
+++ b/app/views/answers/new_comment.erb
@@ -1,7 +1,7 @@
 <div class='container'>
-   <form action="/answers/<%= @answer.id.to_s%>/comments" method="POST">
+   <form action="/answers/<%= @answer.id.to_s%>/comments" method="post">
      <label for="comment"> Comment: </label>
-     <textarea cols='60' rows='10' name="[comment]body" id='body'></textarea>
+     <textarea cols='60' rows='4' name="[comment]body" id='body'></textarea>
      <input type="submit" value="Submit Comment">
   </form>
 </div>
