--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -59,4 +59,4 @@
 		<% end %>
 	</table>
 </div>
-<div><a href="/users/<%= @user.id %>/edit"></a>Update Profile</div>
+<div><a href="/users/<%= @user.id %>/edit">Update Profile</a></div>
