--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -47,26 +47,14 @@
         <li><%= comment.body %><br><%= comment.user.username%></li>
       <% end %>
     </ul>
-<<<<<<< HEAD
-  </div>
-  <div>
-    <% if session[:id] %>
-      <a href='/answers/<%= answer.id %>/comments/new' class='answer_comment'>add a comment</a>
-    <% end %>
-  </div>
-=======
   </article>
   <% if session[:id] %>
     <a href='/answers/<%= answer.id %>/comments/new'>add a comment</a>
   <% end %>
 <% end %>
-<% if session[:id] %>
-  <h3><a href='/questions/<%= @question.id.to_s %>/answers/new'>Post Your Answer</a></h3>
->>>>>>> pair-iagon,jaredgraham12,mdinh7,ryana760
-<% end %>
 
 <div>
-  <% if session[:id] && session[:id] !=  @question.id %>
+  <% if session[:id] && session[:id] != @question.user_id %>
     <h3><a href='/questions/<%= @question.id.to_s %>/answers/new' class='answer_question'>Post Your Answer</a></h3>
   <% end %>
 </div>
