--- a/public/src/styles.sass
+++ b/public/src/styles.sass
@@ -5,6 +5,12 @@ $primary-color: darkgrey
 $orange: #f4b541
 $dark-orange: #f4aa42
 
+$orange: #F48024
+$blue: #0095FF
+$link-blue: #33AAFF
+$light-blue: #CCEAFF
+$light-grey: #FAFAFB
+
 // *
 //   border: dashed 1px red
 
@@ -39,7 +45,7 @@ p
 // ========== a. Navbar ==========
 .main-nav
   background-color: lightgray
-  box-shadow: 0px 2px 2px 0px grey
+  box-shadow: 0 2px 2px 0 grey
   height: 70px
   justify-content: space-between
 .nav-header
