--- a/app/views/users/update_user.erb
+++ b/app/views/users/update_user.erb
@@ -11,6 +11,6 @@
      <label for = "email"> New Email: </label>
   </div>
      <input class="form-control" type = "email" name = "[user]email" id = email>
-     <button type="submit" class="btn btn-primary btn-sm">Register</button>
+     <button type="submit" class="btn btn-primary btn-sm">Update</button>
   </form>
 </div>
