Edit all parts of application.js, questions/show.erb, comments erb, answers erb, answers and comments controllers to be compatible with changes

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -115,4 +115,9 @@ p {
 .left {
   left: 0; }
 
+div.answer-show {
+  display: inline-block;
+  float: left;
+}
+
 /*# sourceMappingURL=application.css.map */
