--- a/app/views/answers/_show.erb
+++ b/app/views/answers/_show.erb
@@ -1,3 +1,5 @@
+<div class="question-answer">
+
 <% if logged_in? %>
   <div>
   <form class="a-upvote" method="post" action='/questions/<%= answer.question_id %>/answers/<%= answer.id %>/vote'>
@@ -17,15 +19,18 @@
   <% if logged_in? && answer.answerer_id == session[:id] %>
     <ul class="no-bullets no-padding mar-t-2">
       <li class="pipe-separate left">
-        <a href="/questions/<%= question.id %>/answers/<%= answer.id %>/edit" class="edit c-white">edit</a>
+        <a href="/questions/<%= question.id %>/answers/<%= answer.id %>/edit" class="edit-answer">edit</a>
       </li>
       <li class="pipe-separate left">
-        <form method="post" action="/questions/<%= question.id %>/answers/<%= answer.id %>" class="inline">
+        <form class="delete-answer" method="post" action="/questions/<%= question.id %>/answers/<%= answer.id %>" class="inline">
           <input type="hidden" name="_method" value="delete">
           <input type="submit" value="delete" class="no-border no-outline no-bg c-white hover-underline">
         </form>
       </li>
     </ul>
   <% end %>
+</div>
+
+<%= erb :'/answers/_comments', locals: {question: question, answer: answer} %>
 
 </div>
