--- a/app/views/answers/edit.erb
+++ b/app/views/answers/edit.erb
@@ -2,12 +2,4 @@
 <p><%= @question.body %></p>
 <span><%= "Asked by #{@question.questioner} on #{long_form_date(@question.created_at)}" %></span>
 
-<div>
-<form method="post" action="/questions/<%= @question.id %>/answers/<%= @answer.id %>">
-  <input type="hidden" name="_method" value="put">
-  <label for="body-textarea">Reply:</label>
-  <textarea id="body-textarea" name="answer[body]"><%= @answer.try(:body) %></textarea>
-  <input type="submit" value="Update">
-</form>
-<span><%= "Answered by #{@answer.answerer.username} on #{long_form_date(@answer.created_at)}" %></span>
-</div>
+<%= erb :'/answers/_edit', locals: {question: @question, answer: @answer}%>
