--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -74,14 +74,22 @@
 
   <ul class="question-answers">
     <% question.answers.each do |answer| %>
-      <li><%= erb :'answers/_show', locals: {question: question, answer: answer} %></li></br>
-      <% if answer.best_answer? then %><%= "THIS ANSWER IS AMAZING" %><% end %>
-      <% if question.questioner_id == session[:id] %>
-      <form action="/questions/<%= answer.question_id %>/answers/<%= answer.id %>/bestanswer" method="POST">
-        <input type="hidden" name="_method" value="PUT">
-        <input type="submit" value="Best Answer">
-      </form>
-      <% end %>
+      <li class="answers-list">
+        <span id="best-answer-div">
+          <li><%= erb :'answers/_show', locals: {question: question, answer: answer} %></li></br>
+          <% if answer.best_answer? %><img class="best-answer-image" src="http://clipartix.com/wp-content/uploads/2016/04/Thumbs-up-clipart-2.png" alt="Best" height="30" width="30">
+          <% else %>
+            <img class="best-answer-image" src="http://clipartix.com/wp-content/uploads/2016/04/Thumbs-up-clipart-2.png" alt="Best" height="30" width="30" style="display: none">
+          <% end %>
+
+          <% if question.questioner_id == session[:id] %>
+          <form class="best-answer-form" action="/questions/<%= answer.question_id %>/answers/<%= answer.id %>/bestanswer" method="POST">
+            <input type="hidden" name="_method" value="PUT">
+            <input type="submit" value="Best Answer">
+          </form>
+        </span>
+          <% end %>
+      </li>
         <ul id="answer-comment-ul">
           <% answer.comments.each do |comment| %>
             <% if logged_in? %>
