--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -39,21 +39,20 @@
 		<% end %>
 	</table>
 	<table>
-		<% if !@question_comments.empty? || !@answer_comments.empty? %>
+		<% if !@comments.empty?  %>
 		<tr>
 			<th>Commented On:</th>
 			<th>Date</th>
 		</tr>
-			<% @question_comments.each do |comment| %>
+			<% @comments.each do |comment| %>
 			<tr>
+				<% if comment.commentable_type == "Question" %>
 				<td><a href='/questions/<%= comment.commentable.id %>'><%= comment.commentable.title %></a></td>
 				<td><%= comment.created_at %></td>
-			</tr>
-			<% end %>
-			<% @answer_comments.each do |comment| %>
-			<tr>
+				<% else %>
 				<td><a href='/questions/<%= comment.commentable.question_id %>'><%= comment.commentable.question.title %></a></td>
 				<td><%= comment.created_at %></td>
+				<% end %>
 			</tr>
 			<% end %>
 		<% end %>
