Progress with updating answers?

--- a/app/views/questions/update_question.erb
+++ b/app/views/questions/update_question.erb
@@ -11,6 +11,6 @@
      <input type="text" name="[question]title" id='title'>
      <label for="body"> New Body: </label>
      <textarea cols='60' rows='10' name="[question]body" id='body'></textarea>
-     <input type="submit" value="Submit Question">
+     <input type="submit" value="Submit Changes">
   </form>
 </div>
