--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -4,7 +4,7 @@
   <p class='question-body'><%= @question.body %></p>
 </div>
 
-<article id = "<%= @question.id %>">
+<article id = "<%= @question.id %>" class='question_votes'>
 
   <% @voted_question = Vote.find_by(voteable_type: "Question", voteable_id: @question.id, user_id: session[:id]) %>
   <% if @voted_question %>
@@ -27,10 +27,10 @@
    <% end %>
 
 </article>
-<h4><%= @question.comments.count %> Comments</h4>
+<h4 class='question_comments_count'><%= @question.comments.count %> Comments</h4>
 <ul class='q_comments'>
   <% @question.comments.each do |comment| %>
-  <li><%= comment.body %><br><%= comment.user.username%></li>
+  <li><%= comment.body %>  - <%= comment.user.username%></li>
   <% end %>
 </ul>
 <div>
@@ -38,10 +38,10 @@
   <a href='/questions/<%= @question.id %>/comments/new' class='question_comment'>add a comment</a>
   <% end %>
 </div>
-<h2><%= @question.answers.count %> Answers</h2>
+<h2 class='answer_count'><%= @question.answers.count %> Answer(s)</h2>
 <% @question.answers.each do |answer| %>
   <article id="answer<%= answer.id %>" class='answer'>
-    <span><%= answer.body %></span> </br>
+    <span class='answer_content'><br><%= answer.body %><br></span> </br>
     <% @voted_answer = Vote.find_by(voteable_type: "Answer", voteable_id: answer.id, user_id: session[:id]) %>
     <% if @voted_answer %>
       <button type="button" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-triangle-top"></span> </button>
@@ -53,10 +53,10 @@
     <span class="count-answer"> <%= answer.votes.count %> votes || </span>
     <span class='answer-user'><%= answer.user.username %>   -   <%= answer.updated_at%></span>
 
-    <h4><%= answer.comments.count %> Comments</h4>
-    <ul>
+    <h4 class='answer_comments_count'><%= answer.comments.count %> Comments</h4>
+    <ul class='a_comments'>
       <% answer.comments.each do |comment| %>
-        <li><%= comment.body %><br><%= comment.user.username%></li>
+        <li><%= comment.body %>  - <%= comment.user.username%></li>
       <% end %>
     </ul>
   </article>
