--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -44,7 +44,9 @@
 <% @answers.each_with_index do |answer, index| %>
  <% if index == 0 %>
    <article id="answer<%= answer.id %>" class='answer'>
-     <span><%= answer.body %></span> </br>
+     <span><%= answer.body %></span>
+     <button type="button" class="btn btn-warning pull-right inline"><span class="glyphicon glyphicon-fire"></span> Popular Answer</button>
+     </br>
      <% @voted_answer = Vote.find_by(voteable_type: "Answer", voteable_id: answer.id, user_id: session[:id]) %>
      <% if @voted_answer %>
        <button type="button" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-triangle-top"></span> </button>
@@ -55,7 +57,7 @@
    <% end %>
    <span class="count-answer"> <%= answer.votes.count %> votes || </span>
    <span class='answer-user'><%= answer.user.username %>   -   <%= answer.updated_at%></span>
-   <button type="button" class="btn btn-warning inline"><span class="glyphicon glyphicon-fire"></span> Popular Answer</button> </br>
+   </br>
 
     <h4><%= answer.comments.count %> Comments</h4>
    <ul>
