--- a/app/views/components/_c-container.erb
+++ b/app/views/components/_c-container.erb
@@ -1,5 +1,6 @@
 <div class="c-container">
+  <%= erb :'/components/_v-container', locals: { comment: comment, answer: nil, question: nil } %>
   <p class="c_body"><%= comment.body %></p>
   <span class="c_user"><%= comment.user.username %></span>
-  <span class="c_timestamp"><%= long_form_date(comment.timestamp) %></span>
+  <span class="c_timestamp"><%= long_form_date(comment.created_at) %></span>
 </div>
