--- a/app/views/components/_cs-container.erb
+++ b/app/views/components/_cs-container.erb
@@ -1,5 +1,10 @@
-<div class="cs_container">
+<div class="cs-container">
   <% comments.each do |comment| %>
-    <%= erb :'c-container', locals: {comment: comment} %>
+    <%= erb :'/components/_c-container', locals: {comment: comment} %>
+  <% end %>
+  <% if question %>
+    <%= erb :'/components/_c-form', locals: { action: "/questions/#{question.id}" } %>
+  <% elsif answer %>
+    <%= erb :'/components/_c-form', locals: { action: "/questions/#{answer.question.id}/answers/#{answer.id}" } %>
   <% end %>
 </div>
