--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -42,7 +42,7 @@
 </div>
 
 
-<h2><%= @question.answers.count %> Answers</h2>
+<h2 class='answer_count'><%= @question.answers.count %> Answer(s)</h2>
 <% @answers.each_with_index do |answer, index| %>
  <% if index == 0 %>
    <article id="answer<%= answer.id %>" class='answer'>
