--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,4 +1,4 @@
-<h1><%= @user.username.capitalize %>'s Profile</h1>
+<h1 class='profile_title'><%= @user.username.capitalize %>'s Profile</h1>
 
 <div>
 	<table>
