Refactors answer form and debugs ajax

--- a/app/views/components/_c-form.erb
+++ b/app/views/components/_c-form.erb
@@ -1,5 +1,5 @@
 <div>
-  <a id="answer-comment-link" href="<%= action %>/comments/new">Comment on this answer</a>
+  <a id="answer-comment-link" href="<%= action %>/comments/new">Comment on this <%= commentable.class %></a>
   <form class="c-form" action="<%= action %>/comments" method="POST">
     <textarea name="body" placeholder="Enter comment..."></textarea>
     <input type="submit">
