--- a/app/views/components/_cs-container.erb
+++ b/app/views/components/_cs-container.erb
@@ -3,8 +3,8 @@
     <%= erb :'/components/_c-container', locals: {comment: comment} %>
   <% end %>
   <% if question %>
-    <%= erb :'/components/_c-form', locals: { action: "/questions/#{question.id}" } %>
+    <%= erb :'/components/_c-form', locals: { action: "/questions/#{question.id}", commentable: question } %>
   <% elsif answer %>
-    <%= erb :'/components/_c-form', locals: { action: "/questions/#{answer.question.id}/answers/#{answer.id}" } %>
+    <%= erb :'/components/_c-form', locals: { action: "/questions/#{answer.question.id}/answers/#{answer.id}", commentable: answer } %>
   <% end %>
 </div>
