--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -58,4 +58,4 @@
 		<% end %>
 	</table>
 </div>
-<div><a href="/users/<%= @user.id %>/edit">Update Profile</a></div>
+<div class='profile_update'><a href="/users/<%= @user.id %>/edit">Update Profile</a></div>
