--- a/public/css/application.css
+++ b/public/css/application.css
@@ -37,7 +37,9 @@ td, th {
   height: 40px;
 }
 
-tr:nth-child(even) {background-color: #f2f2f2}
+tr:nth-child(even) {
+  background-color: #f2f2f2
+}
 
 .question-title {
   font-size: 24px;
