--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -1,56 +1,23 @@
 <div class="sub-container flex-column">
 
-  <div class="sort-by-tabs flex-row">
+  <h2>Questions</h2>
+
+  <div class="sort-buttons flex-row">
     <button class="most-recent-tab">Most Recent</button>
     <button class="highest-vote-tab">Most Upvoted</button>
     <button class="trending-tab">Trending</button>
   </div>
 
-  <h2>Questions</h2>
-  <!-- Questions by most recent -->
-  <ul class="sorted-questions questions-by-most-recent">
-    <% questions_by_most_recent.each do |question| %>
-      <li class="home-questions-li">
-        <%= erb :'/components/_q-container', locals: { question: question } %>
-      </li>
-
-    <% end %>
+  <ul class="sorted-qs by-most-recent">
+    <%= erb :'/components/_qs-container', locals: { questions: questions_by_most_recent} %>
   </ul>
 
-  <ul class="sorted-questions questions-by-highest-vote">
-    <% questions_by_highest_vote.each do |question| %>
-      <li class="home-questions-li">
-        <div class="home-questions-left question-data">
-          <p class="question-data-stats"><%= question.points %><br>votes</p>
-          <p class="question-data-stats"><%= question.answers.count %><br>answers</p>
-        </div>
-        <div class="home-questions-right">
-          <a href=questions/<%=question.id%> class="question-link"><%= question.title %></a>
-          <div>
-            <span class="question-data-user">Asked at <%= question.created_at %></span>
-            <span class="question-data-user">by <a href="/users/<%= question.questioner.id %>" class="question-link"><%= question.questioner.username %></a></span>
-          </div>
-        </div>
-      </li>
-    <% end %>
+  <ul class="sorted-qs by-highest-vote">
+    <%= erb :'/components/_qs-container', locals: { questions: questions_by_highest_vote } %>
   </ul>
 
-  <ul class="sorted-questions questions-by-trending">
-    <% questions_by_trending.each do |question| %>
-      <li class="home-questions-li">
-        <div class="home-questions-left question-data">
-          <p class="question-data-stats"><%= question.points %><br>votes</p>
-          <p class="question-data-stats"><%= question.answers.count %><br>answers</p>
-        </div>
-        <div class="home-questions-right">
-          <a href=questions/<%=question.id%> class="question-link"><%= question.title %></a>
-          <div>
-            <span class="question-data-user">Asked at <%= question.created_at %></span>
-            <span class="question-data-user">by <a href="/users/<%= question.questioner.id %>" class="question-link"><%= question.questioner.username %></a></span>
-          </div>
-        </div>
-      </li>
-    <% end %>
+  <ul class="sorted-qs by-trending">
+    <%= erb :'/components/_qs-container', locals: { questions: questions_by_trending } %>
   </ul>
 
 </div>
