--- a/public/css/application.css
+++ b/public/css/application.css
@@ -9,6 +9,16 @@
   text-align: center;
 }
 
+.btn.btn-default {
+    color: #ffffff;
+    background-color: #474747;
+    border-color: #9c9c9c #9c9c9c #9c9c9c;
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-top: 5px;
+    text-align: center;
+}
+
 /*category list*/
 .category-select > ul {
   list-style: none;
@@ -125,4 +135,3 @@
 .btn-warning {
   float: right
 }
-
