--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -2,5 +2,7 @@
 <label for="title">Title</label>
 <input type="text" name="title" placeholder="Enter question title">
 <textarea rows="10" cols="50" name="body" form="questionform" placeholder="Enter question here"></textarea>
+<input type="text" name="tags" placeholder="Enter tags seperated by comma">
 <input type="submit">
 </form>
+
